add readme to toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT"
 keywords = ["linked_list", "stack", "queue"]
 categories = ["data-structures"]
 exclude = [".idea/"]
+readme = "README.md"
 repository = "https://github.com/EMachad0/rust_linked_list"
 
 [dependencies]
